test/syntax/fail/redeclaration_of_constructor.sync
type s0 = S0
type s1 = S0
